# Spread-Indice

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  COMMANDS.md  METHODOLOGY.md  brief_session2_grid_NQ_RTY_ES_RTY.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
agents/: agent-doc.md  deep-search.md  expert-engine.md  expert-spread.md  fast-search.md
config/: backtest.yaml  instruments.yaml  optimisation.yaml  pairs.yaml
scripts/: ablation_conf_weights_NQ_RTY.py  analyze_complementarity.py  analyze_grid_NQ_RTY.py  analyze_grid_ols_NQ_RTY.py  analyze_grid_results.py  analyze_grid_step2_NQ_RTY.py  analyze_kalman_textbox_NQ_RTY.py  batch_volume_search.py  check_maxdd_ols_NQ_RTY.py  check_maxdd_ols_NQ_RTY_v2.py  check_maxdd_refined_NQ_RTY.py  compare_candidates_NQ_RTY.py  compare_micro_sizing.py  compare_sierra_python.py  compare_sierra_python_v2.py  debug_hurst_cpp.py  debug_hurst_cpp_v2.py  debug_hurst_final.py  deep_analysis_ols_balanced.py  explore_pairs.py  find_safe_kalman.py  find_safe_kalman_micro.py  grid_dollar_tpsl.py  grid_kalman_v2_NQ_RTY.py  mfe_mae_analysis.py  phase13c_analysis.py  phase13c_deep_analysis.py  phase13c_final_checks.py  phase13c_grid_massif.py  phase13c_report_d.py  phase13c_surgical_grid.py  plot_equity_curves.py  rank_top_configs_NQ_RTY.py  refine_ols_balanced.py  run_backtest.py  run_grid.py  run_grid_kalman_NQ_RTY.py  run_grid_kalman_v3.py  run_grid_nqrty_09_15.py  run_grid_nqrty_09_15_step2.py  (+19 more)
sierra/: NQ_YM_SpreadMeanReversion_v1.0.cpp  infos_sierra.md  specs_actifs.md
tests/: conftest.py
(+70 files in other folders)
